--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-client": "^0.8.1",
+    "@apollo/client": "^3.8.8",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
     "axios": "^0.15.3",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
@@ -34,12 +36,16 @@
     "nodemon": "^2.0.22",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "react": "^15.4.2",
-    "react-apollo": "^0.9.0",
-    "react-dom": "^15.4.2",
+    "react": "16.7.0-alpha.0",
+    "react-apollo": "^3.1.5",
+    "react-dom": "16.7.0-alpha.0",
     "react-router": "^3.0.2",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.0",
     "webpack-dev-middleware": "^1.9.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-object-rest-spread": "^7.23.4",
+    "babel-preset-stage-0": "^6.24.1"
   }
 }
