--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-apollo": "^3.1.5",
     "react-dom": "16.7.0-alpha.0",
     "react-router": "^3.0.2",
+    "recompose": "^0.30.0",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.0",
     "webpack-dev-middleware": "^1.9.0"
